<resources>
    <string name="app_name">Blossom</string>
    <string name="facebook_app_id">1776927899226105</string>
    <string name="intro_text_1">In the United States, hurdles around access to quality education in impoverished, low-income, immigrant, and English as a second language communities perpetuate a cycle of poverty, illiteracy, and low wages. The lack of educational opportunities and resources, exposure to non-traditional educational opportunities, and low high school graduation rates in these very communities have long term effects that extend beyond the individual student.</string>
    <string name="intro_text_2">Inspired by First Lady Michelle Obama’s “Let Girls Learn” initiative, the American Bar Association Young Lawyers Division (ABA YLD) has created this mobile app to be a resource to under-served and often overlooked communities to combat the crisis of unequal access to education. The goal of this initiatives is to demonstrate the value of obtaining an education and encouraging its pursuit.</string>
    <string name="intro_text_3">With your help and participation, we will bridge a nationwide educational gap, in order to equip students with the knowledge, skills, and exposure that they need to break down educational barriers, and fill voids in their communities. Because of you, we will change the trajectory of success for students across the world.</string>
    <string name="intro_title_1">YOUR LIFE</string>
    <string name="intro_title_2">YOUR WORLD</string>
    <string name="intro_title_3">YOUR VISION</string>
    <string name="get_started">Get Started</string>
    <string name="main_button_text_1">Help me find a career</string>
    <string name="main_button_text_2">Begin my career journey</string>
    <string name="read_more">Read More</string>
    <string name="find_a_career">FIND A CAREER</string>
    <string name="search">SEARCH</string>
    <string name="videos">Videos</string>
    <string name="generally_you_need">Generally you\'ll need:</string>
    <string name="tell_us">TELL US ABOUT YOURSELF</string>
    <string name="more_info">More Info</string>
    <string name="contact">Contact</string>
    <string name="scholly">Scholly</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="forgot_password"><u>Forgot Password</u>.</string>
    <string name="create_an_account"><u>Create an Account</u>.</string>
    <string name="create_account_title">CREATE AN ACCOUNT</string>
    <string name="login_title">LOGIN</string>
    <string name="create_account">Create Account</string>
    <string name="career_search">Career Search</string>
    <string name="financial_literacy">Financial Literacy</string>
    <string name="add_to_my_careers">Add To My Careers</string>
    <string name="my_careers">My Careers</string>
    <string name="my_career_title">MY CAREER</string>
    <string name="your_career_path_is">Your career path is</string>
    <string name="my_progress">My Progress</string>
    <string name="view_resources">View Resources</string>
    <string name="menu">Menu</string>
    <string name="my_career">My Career</string>
    <string name="resources">Resources</string>
    <string name="restart_your_journey">Restart your Journey</string>
    <string name="logout">Logout</string>
    <string name="scholarships">Scholarships</string>
    <string name="links">Links</string>
    <string name="due">Due:</string>
    <string name="amount">Amount:</string>
    <string name="useful_links">Useful Links</string>
    <string name="financial_literacy_caps">FINANCIAL LITERACY</string>
    <string name="lets_recap">Let\'s Recap</string>
    <string name="blossom_caps">BLOSSOM</string>
    <string name="your_career_guide">Your career guide.</string>
</resources>
