<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/menuBkg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCloseMenu"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_close"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/btnMenuHome"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_home"
                android:layout_width="35dp"
                android:layout_height="35dp" />

        </RelativeLayout>

        <TextView
            android:text="@string/menu"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/llMenuItemMyCareer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMenuItemMyCareer"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/my_career"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/menuItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMenuItemResources"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMenuItemResources"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/resources"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/menuItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMenuItemCareerSearch"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMenuItemCareerSearch"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/career_search"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/menuItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMenuItemFinancialLiteracy"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMenuItemFinancialLiteracy"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/financial_literacy"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/menuItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMenuItemScholly"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMenuItemScholly"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/scholly"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/menuItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMenuItemContact"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMenuItemContact"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="Contact"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/menuItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtMenuItemLogin"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/llMenuItemRestartPath"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtMenuItemRestartPath"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/restart_your_journey"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:background="@color/menuItemDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtMenuItemLogout"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>