<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMyResourcesLayout"
    android:background="@color/mainBkg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llHeaderProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/resources"
                    android:textSize="25sp"
                    android:layout_marginTop="25dp"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/btnMenu"
                    android:src="@drawable/ic_navigation_menu_blue"
                    android:layout_centerInParent="true"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/roundcorner_white"
                    android:padding="1dp" />

            </RelativeLayout>

            <TextView
                android:text="@string/videos"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v4.view.ViewPager
                android:id="@+id/pagerVideos"
                android:layout_width="wrap_content"
                android:layout_height="200dp" />

            <TextView
                android:text="@string/scholarships"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.findigital.blossom.adapters.ResponsiveViewPager
                android:id="@+id/pagerScholarships"
                android:layout_width="wrap_content"
                android:layout_height="200dp" />

            <TextView
                android:text="@string/links"
                android:textSize="20sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.findigital.blossom.adapters.ResponsiveViewPager
                android:id="@+id/pagerLinks"
                android:layout_width="wrap_content"
                android:layout_height="200dp" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>