<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mainBkg"
    android:id="@+id/rlMyCareerLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llHeaderProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            style="?android:attr/progressBarStyle"
            android:indeterminateTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView android:id="@+id/imgMyCareerCover"
                android:src="@drawable/start"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <ImageButton
                android:id="@+id/btnMenu"
                android:src="@drawable/ic_navigation_menu_blue"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/roundcorner_white"
                android:padding="1dp" />

            <LinearLayout
                android:orientation="vertical"
                android:padding="30dp"
                android:layout_below="@id/imgMyCareerCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/my_career_title"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/your_career_path_is"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtMyCareerName"
                    android:text="Engineer"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtMyCareerIntro"
                    android:text="Engineering is the branch of science and technology concerned with designing, building, and using engines, machines, and structures. Engineers design bridges and buildings and develop processes to clean up toxic spills. The five largest areas of engineering are chemical, civil, electrical, industrial, and mechanical. Within these areas of engineering, there are more specialized engineering fields, including aerospace, nuclear, biomedical, oceanic, computer, and environmental."
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@color/white"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:background="@color/lineTransparent"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp" />

                <Button
                    android:id="@+id/btnMyCareerProgress"
                    android:background="@drawable/button_transparent"
                    android:textColor="@color/white"
                    android:text="@string/my_progress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <Button
                    android:id="@+id/btnMyCareerResources"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_transparent"
                    android:textColor="@color/white"
                    android:text="@string/view_resources"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>